fixed SubHeader cramped links

--- a/src/apps/content-editor/src/app/views/ItemEdit/components/SubHeader/SubHeader.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/components/SubHeader/SubHeader.less
@@ -14,11 +14,13 @@
 
   .Path {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     flex: 1;
 
     .Preview {
       display: flex;
+      flex-direction: column;
     }
 
     a {
